ajuste no layout do projeto

--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ header nav ul a:hover {
     text-decoration: underline;
 }
 
-/* conteudo principal */
+/* conteudo - principal */
 
 main {
     margin: 0px 30px;
